[package]
name = "wormhole-rs-wasm"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.26"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3.61"
magic-wormhole = { path = "../vendor/magic-wormhole.rs" }
serde = "1.0.152"
serde_json = "1.0.91"
serde-wasm-bindgen = "0.4.5"
thiserror = "1.0.38"
url = { version = "2.3.1", features = ["serde"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.61", features = ["File"] }
